# spellbook

./: .env  Cargo.toml  README.md
migrations/: 20240309195002_initial.sql  20240309202828_data.sql
src/: handler.rs  main.rs  state.rs
src/handler/: create.rs  delete.rs  list.rs  read.rs  update.rs
