[package]
name = "spellbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fred = "8.0"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "chrono", "tls-rustls"] }
chrono = { version = "0.4", features = ["serde"]}
names = { version = "0.14.0", default-features = false }
dotenv = "0.15.0"
